--- a/style.css
+++ b/style.css
@@ -1,14 +1,5 @@
-<head>
-  <meta charset="UTF-8" />
-  <title>RUN BUDDY</title>
-
-  <!-- Add this to the page and see what happens! -->
-  <style>
     body {
       background-color: tomato;
     }h1 {
   font-size: 100px;
-}  </style>
-</head>
-
-    
+} 
