--- a/style.css
+++ b/style.css
@@ -1,5 +1,16 @@
-    body {
-      background-color: tomato;
-    }h1 {
-  font-size: 100px;
-} 
+  body {
+      font-family: Helvetica, Arial, sans-serif;
+     background-color: tomato 
+    }
+
+ body{
+     /* text color blue*/
+      color:#39a6b2;
+      font-family:Arial, Helvetica, sans-serif
+  }
+
+  /*apply styles to header*/
+  header{
+      padding: 20px 35px;
+      background-color: #39a6b2;
+  }
