--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
   body {
-      font-family: Helvetica, Arial, sans-serif;
-     background-color: tomato 
+      font-family: Helvetica, Arial, sans-serif; 
     }
 
  body{
@@ -23,5 +22,21 @@
   }
 
   header a {
-      color: #fce138;
+    text-decoration: none; 
+    color: #fce138;
+  }
+
+  header nav {
+      float: right;
+      margin: 7px 0;
+  }
+
+  header nav ul li{
+      display: inline;
+  }
+
+  header nav ul li a {
+      margin: 0 38px;
+      font-weight: lighter;
+      font-size: 22px; 
   }
