--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
   body {
       font-family: Helvetica, Arial, sans-serif; 
     }
@@ -7,18 +12,19 @@
       color:#39a6b2;
       font-family:Arial, Helvetica, sans-serif
   }
-
+  
   /*apply styles to header*/
   header{
       padding: 20px 35px;
       background-color: #39a6b2;
   }
-
-  header h1 {
+ 
+    header h1 {
       font-weight: bold;
       font-size: 36px;
       color: #fce138;
       margin: 0;
+      display: inline;
   }
 
   header a {
@@ -36,7 +42,9 @@
   }
 
   header nav ul li a {
-      margin: 0 38px;
+      margin: 0 30px;
       font-weight: lighter;
-      font-size: 22px; 
+      font-size: 16px; 
   }
+
+  
