--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
     margin: 0;
     padding: 0;
 }
+*{ 
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
   body {
       font-family: Helvetica, Arial, sans-serif; 
@@ -47,4 +52,26 @@
       font-size: 16px; 
   }
 
+  footer {
+      background: #fce138;
+      width: 100%;
+      padding: 20px 15px;
+  }
+
+  footer h2 {
+      display: inline;
+      color: #024e76;
+      font-size: 30px;
+      margin: 0;
+  }
+
+  footer div{
+      float: right;
+      line-height: 1.5;
+      text-align: right;
+  }
+
+  footer a {
+      color: #024e76;
+  }
   
