--- a/style.css
+++ b/style.css
@@ -74,4 +74,24 @@
   footer a {
       color: #024e76;
   }
+   
+  section  {
+    padding: 60px;
+   }
+
+    .hero {
+    background-image: url(../../assets/images/hero-bg.jpg);
+    height: 600px;
+    background-size: cover;
+    background-position: center;
+  }
+
+  .hero-form {
+      background-color: #fce138;
+      width: 500px;
+      padding: 20px;
+      color: #024e76;
+      border: solid 3px #024e76;
+  }
+
   
